adding extra classes