@@ -16,10 +16,21 @@ repositories {
     }
 }
 
-//tasks runSuite(type: Test) {
-//    include '**/TestPrimer.class'
-//    exclude '**/*Test.class'
-//}
+tasks.withType(Test) {
+    jvmArgs '-Xms128m', '-Xmx1024m', '-XX:MaxPermSize=128m'
+    maxParallelForks = 4  // this runs tests parallel if more than one class
+    testLogging {
+        exceptionFormat "full"
+        events "started", "passed", "skipped", "failed", "standardOut", "standardError"
+        displayGranularity = 0
+    }
+}
+
+task runTestSuite(type: Test) {
+    include '**/TestPrimer.class'
+    exclude '**/*Test.class'
+
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
